--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.1",
     "@vidstack/react": "next",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
