--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.3",
     "@vidstack/react": "next",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
