--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.3",
     "@vidstack/react": "next",
+    "i18next": "^23.7.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.0",
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
