style(biomejs): Change jsx quote style to single

--- a/biome.json
+++ b/biome.json
@@ -12,6 +12,7 @@
     "formatter": {
       "semicolons": "asNeeded",
       "quoteStyle": "single",
+      "jsxQuoteStyle": "single",
       "trailingComma": "all"
     }
   },
