--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "format": "bunx @biomejs/biome format src --write",
-    "lint": "bunx @biomejs/biome lint src",
-    "check": "bunx @biomejs/biome check --apply src",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
     "@vercel/analytics": "^1.1.1",
@@ -24,11 +22,15 @@
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.5.2",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
