--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         node-version: 18
     - name: Install dependencies
-      run: curl -fsSL https://bun.sh/install | bash && bun i
+      run: npm i -g bun && bun i
     - name: Install Playwright Browsers
       run: bun run playwright install --with-deps
     - name: Run Playwright tests
