feat: Add Jotai and Jotai-effect dependencies

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "classnames": "^2.5.1",
     "i18next": "^23.7.16",
     "i18next-browser-languagedetector": "^7.2.0",
+    "jotai": "^2.6.4",
+    "jotai-effect": "^0.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.0",
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@playwright/test": "latest",
+    "@swc-jotai/react-refresh": "^0.1.0",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
