--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,8 +13,9 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: 20
+    - uses: oven-sh/setup-bun@v2
     - name: Install dependencies
-      run: npm i -g bun && bun i
+      run: bun i
     - name: Install Playwright Browsers
       run: bun run playwright install --with-deps
     - name: Run Playwright tests
