--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
-    "@vidstack/react": "next",
+    "@vidstack/react": "1.9.8",
     "classnames": "^2.5.1",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^7.2.1",
